--- a/programming_courses/programming_pages/styles.css
+++ b/programming_courses/programming_pages/styles.css
@@ -155,6 +155,7 @@ body {
     border-radius: 20px;
 }
 .slider_cards_container{
+    transition: .3s;
     display: flex;
 
 }
@@ -166,7 +167,7 @@ body {
     width: 350px;
     display: flex;
     flex-direction: column;
-    transition-duration: .3s;
+    transition: all 0.4s ease;
 }
 .slider_card:hover{
     transform: translateY(-5px);
@@ -197,7 +198,6 @@ background-color: transparent;
 border-radius: 5px;
 border-color: #c084fc;
 font-size: 30px;
-transition-duration: .3s;
 }
 .slider button:hover{
     background-color: #d1a5fd;
