--- a/language_curse/french/french.css
+++ b/language_curse/french/french.css
@@ -353,8 +353,8 @@ h1 {
 }
 
 .enroll-btn {
-    background: rgb(237, 234, 255);
-    color: #2c3e50;;
+    background: #2c3e50;
+    color: white;
     padding: 1rem 2rem;
     border: none;
     border-radius: 25px;
@@ -366,7 +366,7 @@ h1 {
 }
 
 .enroll-btn:hover {
-    background:  rgb(199, 196, 211);
+    background: #34495e;
     transform: translateY(-2px);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
