--- a/programming_courses/P_mainpage.css
+++ b/programming_courses/P_mainpage.css
@@ -6,14 +6,14 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: rgb(237, 234, 255);
     min-height: 100vh;
     padding: 2rem;
     color: #333;
 }
 
 .card_container{
-    background-color: #ffffff;
+    background-color: white;
     display: flex;
     max-height: 500px;
     max-width: 1200px;
@@ -49,19 +49,19 @@ body {
 .card_text h1 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
-    color: #222;
+    color: #2c3e50;
 }
 
 .card_text p {
     font-size: 1.25rem;
     line-height: 1.6;
-    color: #555;
+    color: #666;
 }
 .card_button {
     padding: 1rem 10rem;
-    border: 2px solid #c084fc; 
+    border: 2px solid rgb(237, 234, 255); 
     background-color: transparent;
-    color: #c084fc;
+    color: #2c3e50;
     border-radius: 10px;
     font-size: 1rem;
     font-weight: bold;
@@ -72,8 +72,8 @@ body {
 }
 
 .card_button:hover {
-    background-color: #c084fc;
-    color: white;
+    background-color: rgb(237, 234, 255);
+    color: #2c3e50;
 }
 
 .button_co{
@@ -85,4 +85,5 @@ body {
 .button_co h2{
     margin-top: 1rem;
     font-size: 2.75rem;
+    color: #2c3e50;
 }
