--- a/programming_courses/programming_pages/styles.css
+++ b/programming_courses/programming_pages/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: rgb(237, 234, 255);
     min-height: 100vh;
     padding: 2rem 6rem 6rem 6rem;
     color: #333;
